dist paths fixed

--- a/src/sass/blocks/Projects.scss
+++ b/src/sass/blocks/Projects.scss
@@ -47,7 +47,7 @@
     }
   }
   &_arrow{
-    background: url("/img/projects_arrow.svg");
+    background: url("../img/projects_arrow.svg");
     width: 22px;
     height: 8px;
     margin: 13px auto 0 auto;
