--- a/src/sass/blocks/Header.scss
+++ b/src/sass/blocks/Header.scss
@@ -40,3 +40,46 @@
     }
   }
 }
+
+.menu_burger{
+  position: fixed;
+  display: none;
+  right: 30px;
+  height: 20px;
+  z-index: 100;
+  &_lines{
+    background: $main_color;
+    height: 3px;
+    width: 25px;
+  }
+}
+
+.side_menu{
+  position: fixed;
+  height: 100vh;
+  width: 70%;
+  background: linear-gradient(180deg,#05397e 0,#071947 100%);
+  top: 0;
+  left: -100%;
+  z-index: 100;
+  transition: 1s all;
+  &_wrapper{
+    margin-top: 50vh;
+    transform: translateY(-50%);
+  }
+  &_item{
+    text-align: center;
+    margin: 20px 0;
+  }
+  &_link{
+    font-size: 30px;
+    color: white;
+    &:hover{
+      color: white;
+      text-decoration: none;
+    }
+  }
+}
+.menu_active{
+  left: 0;
+}
