--- a/src/sass/blocks/Promo.scss
+++ b/src/sass/blocks/Promo.scss
@@ -1,11 +1,57 @@
 .promo{
   background: url("../img/promo_bg.png");
   height: 100vh;
+  padding-top: 100px;
+  &_title{
+    font-size: 72px;
+    color: $main_color;
+    font-family: Volkhov;
+    font-weight: 400;
+    text-align: center;
+  }
+  &_divider{
+    border-top: 1px dashed $main_color;
+    width: 446px;
+    margin: 0 auto;
+    margin: 67px auto 25px auto;
+  }
+  &_desc{
+    font-size: 36px;
+    color: white;
+    font-family: Volkhov;
+    text-align: center;
+    padding: 0px 53px;
+    &_marked{
+      font-size: 72px;
+      color: $main_color;
+      font-family: Volkhov;
+      display: inline;
+      margin: 0 10px;
+    }
+  }
+  &_subtitle{
+    font-size: 24px;
+    color: $main_color;
+    font-family: Volkhov;
+    font-weight: 700;
+    text-align: center;
+    margin-top: 62px;
+  }
+  &_subdesc{
+    color: white;
+    text-align: center;
+    padding: 0px 271px;
+    font-weight: 400;
+    margin-top: 27px;
+    font-size: 19px;
+  }
   &_logo{
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
+    width: 100%;
+    max-width: 733px;
   }
   &_arrow{
     background: url("../img/arrow.svg");
@@ -17,4 +63,23 @@
     bottom: 105px;
     cursor: pointer;
   }
+  &_slider{
+    &_wrapper{
+      height: 742px;
+      margin: 0px 310px;
+      position: relative;
+    }
+    &_item{
+      width: 100%;
+      height: 100%;
+      padding-top: 60px;
+      opacity: 0;
+      position: absolute;
+      transition: 1s all;
+    }
+  }
+}
+
+.active{
+  opacity: 1;
 }
