--- a/src/sass/styleeee.scss
+++ b/src/sass/styleeee.scss
@@ -32,3 +32,4 @@
 @import "./blocks/Projects.scss";
 @import "./blocks/Network.scss";
 @import "./blocks/Footer.scss";
+@import "./blocks/_media.scss";
