--- a/src/sass/blocks/Team.scss
+++ b/src/sass/blocks/Team.scss
@@ -28,6 +28,33 @@
     display: flex;
     max-width: 400px;
   }
+
+  &_item_extended{
+    background: linear-gradient(to right, $main_color 1px, transparent 1px) 0 0,
+    linear-gradient(to right, $main_color 1px, transparent 1px) 0 100%,
+    linear-gradient(to left, $main_color 1px, transparent 1px) 100% 0,
+    linear-gradient(to left, $main_color 1px, transparent 1px) 100% 100%,
+    linear-gradient(to bottom, $main_color 1px, transparent 1px) 0 0,
+    linear-gradient(to bottom, $main_color 1px, transparent 1px) 100% 0,
+    linear-gradient(to top, $main_color 1px, transparent 1px) 0 100%,
+    linear-gradient(to top, $main_color 1px, transparent 1px) 100% 100%;
+
+    background-repeat: no-repeat;
+    background-size: 50px 50px;
+    padding: 30px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    max-width: 1000px;
+  }
+  .team_text_extended{
+    color: black;
+    margin-left: 60px;
+    margin-right: 30px;
+    margin-top: 30px;
+  }
+
   &_text{
     margin-top: 12px;
     margin-left: 22px;
