Nik's changes + links added

--- a/src/sass/blocks/Team.scss
+++ b/src/sass/blocks/Team.scss
@@ -27,8 +27,12 @@
     padding: 30px;
     display: flex;
     max-width: 400px;
+    &:hover{
+      text-decoration: none;
+    }
   }
   &_text{
+    color: black;
     margin-top: 12px;
     margin-left: 22px;
     &_title{
