Vova's changes fixed + hidden Social responsibility section added + adaptation

--- a/src/sass/blocks/Footer.scss
+++ b/src/sass/blocks/Footer.scss
@@ -1,5 +1,5 @@
 .footer{
-//  margin-top: ???;
+  margin-top: 160px;
   background: linear-gradient(180deg, rgba(5,57,126,1) 0%, rgba(7,25,71,1) 100%);
   padding: 150px 0;
   &_title{
