--- a/src/sass/styless.scss
+++ b/src/sass/styless.scss
@@ -31,5 +31,6 @@
 @import "./blocks/Team.scss";
 @import "./blocks/Projects.scss";
 @import "./blocks/Network.scss";
+@import "./blocks/Social.scss";
 @import "./blocks/Footer.scss";
 @import "./blocks/_media.scss";
