--- a/src/sass/blocks/Team.scss
+++ b/src/sass/blocks/Team.scss
@@ -11,6 +11,9 @@
     display: flex;
     margin: 77px 140px 0px 140px;
     justify-content: space-evenly;
+    //opacity: 1;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
   }
   &_item{
     background: linear-gradient(to right, $main_color 1px, transparent 1px) 0 0,
@@ -33,7 +36,7 @@
 
 
   &_item_extended{
-    display: none;
+    display: flex;
     background: linear-gradient(to right, $main_color 1px, transparent 1px) 0 0,
     linear-gradient(to right, $main_color 1px, transparent 1px) 0 100%,
     linear-gradient(to left, $main_color 1px, transparent 1px) 100% 0,
@@ -47,41 +50,26 @@
     padding: 30px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 77px;
+    //margin-top: 77px;
     max-width: 1400px;
-    position: relative;
-  }
-  .team_item_extended::after{
-    content: '';
-    height: 100%;
     position: absolute;
-    top: 0;
-    left: 420px;
-    border-left: 1px dashed $main_color;
-  }
-
-  .team_wrapper {
-    display: flex;
-    opacity: 1;
-    transition: opacity 1s ease-in-out;
-  }
-
-  .team_wrapper.hidden {
+    bottom: 0;
     opacity: 0;
-    position: absolute;
-    transition: opacity 1s ease;
+    transition: opacity 0.5s ease-in-out;
+    z-index: -1;
+    width: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    &:after{
+      content: '';
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 420px;
+      border-left: 1px dashed $main_color;
+    }
   }
 
-  .team_item_extended {
-    display: none;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-  }
-
-  .team_item_extended.visible {
-    display: flex;
-    opacity: 1;
-  }
  .close_button{
    cursor: pointer;
    font-size: 20px;
@@ -89,9 +77,10 @@
  }
   .team_text_extended{
     color: black;
-    margin-left: 110px;
-    margin-right: 80px;
-    margin-top: 30px;
+    padding: 30px 80px 0px 110px;
+    //margin-left: 110px;
+    //margin-right: 80px;
+    //margin-top: 30px;
     font-size: 16px;
     font-family: Montserrat;
 
@@ -119,5 +108,10 @@
     }
 
   }
+}
 
+.team_active{
+  opacity: 1;
+  z-index: 1;
+  transition-delay: 0.5s;
 }
