--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -91,7 +91,7 @@
     padding: 10px;
     width: 180px;
   }
-  .network_popup_desc{
+  .network_popup_desc, .network_popup_item{
     font-size: 14px;
   }
   .network_popup_phone{
@@ -252,7 +252,7 @@
   .network_popup_title{
     font-size: 16px;
   }
-  .network_popup_desc{
+  .network_popup_desc, .network_popup_item{
     font-size: 12px;
     line-height: 16px;
   }
