--- a/src/sass/blocks/Footer.scss
+++ b/src/sass/blocks/Footer.scss
@@ -1,4 +1,5 @@
 .footer{
+  margin-top: 160px;
   height: 100vh;
   background: linear-gradient(180deg, rgba(5,57,126,1) 0%, rgba(7,25,71,1) 100%);
   position: relative;
