--- a/src/sass/blocks/Factors.scss
+++ b/src/sass/blocks/Factors.scss
@@ -9,7 +9,7 @@
     padding: 110px 120px;
   }
   &_title{
-    font-size: 72px;
+    @include title;
     font-weight: 400;
     font-family: Volkhov;
     text-align: center;
@@ -23,7 +23,7 @@
   }
   &_item{
     text-align: center;
-    width: 400px;
+    width: 20.833vw;
     position: relative;
     &:nth-last-child(1){
       &:before{
@@ -32,27 +32,31 @@
     }
     &_img{
       margin-bottom: 48px;
+      width: 5.729vw;
     }
     &_title{
       color: $main_color;
       font-weight: 400;
-      font-size: 38px;
+      font-size: 1.979vw;
       font-family: Volkhov;
       margin-bottom: 33px;
     }
     &_desc{
       font-weight: 300;
-      font-size: 18px;
+      font-size: 0.938vw;
       font-family: Montserrat;
       color: white;
     }
-    &:before{
-      content: '';
-      height: 100%;
-      width: 1px;
-      position: absolute;
-      right: -40px;
-      border-left: 1px dashed $main_color;
-    }
+    //&:before{
+    //  content: '';
+    //  height: 100%;
+    //  width: 1px;
+    //  position: absolute;
+    //  right: -40px;
+    //  border-left: 1px dashed $main_color;
+    //}
+  }
+  &_divider{
+    border-left: 1px dashed $main_color;
   }
 }
