--- a/src/sass/blocks/Footer.scss
+++ b/src/sass/blocks/Footer.scss
@@ -6,7 +6,7 @@
   &_title{
     color: $main_color;
     text-align: center;
-    font-size: 72px;
+    @include title;
     font-weight: 400;
     line-height: 93px;
     font-family: Volkhov;
