--- a/src/sass/blocks/Social.scss
+++ b/src/sass/blocks/Social.scss
@@ -12,7 +12,7 @@
     }
   }
   &_title{
-    font-size: 72px;
+    @include title;
     font-family: Volkhov;
     font-weight: 400;
     line-height: 93px;
@@ -21,6 +21,7 @@
     margin-bottom: unset;
   }
   &_img{
+    width: 20.833vw;
     &_borders{
       background: linear-gradient(to right, $main_color 1px, transparent 1px) 0 0,
       linear-gradient(to right, $main_color 1px, transparent 1px) 0 100%,
@@ -34,20 +35,29 @@
       background-repeat: no-repeat;
       background-size: 50px 50px;
       padding: 40px;
+      //display: flex;
+      //align-items: center;
+      //justify-content: center;
+    }
+    &_wrapper{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: unset;
     }
   }
   &_desc{
     padding: 40px 0px 40px 40px;
     &_title{
       color: $main_color;
-      font-size: 22px;
+      font-size: 1.146vw;
       font-weight: 400;
       font-family: Volkhov;
       margin-bottom: unset;
     }
     &_text{
       color: white;
-      font-size: 18px;
+      font-size: 0.938vw;
       font-weight: 300;
       font-family: Montserrat;
       margin-top: 20px;
@@ -57,7 +67,7 @@
       height: calc(100% - 66px);
       &_with_dot{
         color: white;
-        font-size: 18px;
+        font-size: 0.938vw;
         font-weight: 300;
         font-family: Montserrat;
         position: relative;
