--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,3 +1,18 @@
+//@media (max-width: 1450px){
+//  .vision_formula{
+//    margin: 38px 0px 0px 0px;
+//  }
+//  .factors_content{
+//    padding: 110px 30px;
+//  }
+//  .factors_item{
+//    width: 325px;
+//  }
+//  .factors_item_title{
+//    font-size: 32px;
+//  }
+//}
+
 @media (max-width: 1200px) {
   .header_menu{
     width: 550px;
@@ -21,18 +36,38 @@
   .vision_formula{
     flex-direction: column;
   }
+  .vision_formula_item{
+    width: 370px;
+    font-size: 38px;
+  }
+  .unique_line{
+    font-size: 38px;
+  }
   .factors_wrapper{
     flex-direction: column;
     align-items: center;
   }
+  .factors_divider{
+    display: none;
+  }
   .factors_item{
     margin-bottom: 40px;
+    width: 400px;
     &:nth-last-child(1){
       margin-bottom: unset;
     }
     &:before{
       display: none;
     }
+  }
+  .factors_item_img{
+    width: 110px;
+  }
+  .factors_item_title{
+    font-size: 38px;
+  }
+  .factors_item_desc{
+    font-size: 18px;
   }
   .team_wrapper{
     margin: 77px 40px 0 40px;
@@ -58,6 +93,18 @@
   }
   .social_img_borders{
     margin: 0 auto;
+  }
+  .social_img{
+    width: 400px;
+  }
+  .social_desc_title{
+    font-size: 22px;
+  }
+  .social_desc_text{
+    font-size: 18px;
+  }
+  .social_desc_text_with_dot{
+    font-size: 18px;
   }
 }
 
@@ -110,9 +157,9 @@
   .network_popup_phone{
     font-size: 14px;
   }
-  .social_title, .promo_title, .vision_title, .factors_title, .team_title, .projects_title, .network_title, .footer_title{
-    font-size: 62px;
-  }
+  //.social_title, .promo_title, .vision_title, .factors_title, .team_title, .projects_title, .network_title, .footer_title{
+  //  font-size: 62px;
+  //}
   .social_content{
     padding: 110px 80px;
   }
@@ -131,9 +178,9 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  .social_title, .promo_title, .vision_title, .factors_title, .team_title, .projects_title, .network_title, .footer_title{
-    font-size: 42px;
-  }
+  //.social_title, .promo_title, .vision_title, .factors_title, .team_title, .projects_title, .network_title, .footer_title{
+  //  font-size: 42px;
+  //}
   .vision_desc{
     margin: 60px 110px 0 110px;
   }
@@ -193,12 +240,15 @@
   .social_content{
     padding: 110px 50px;
   }
+  .social_img{
+    width: 300px;
+  }
 }
 
 @media (max-width: 576px) {
-  .social_title, .promo_title, .vision_title, .factors_title, .team_title, .projects_title, .network_title, .footer_title{
-    font-size: 32px;
-  }
+  //.social_title, .promo_title, .vision_title, .factors_title, .team_title, .projects_title, .network_title, .footer_title{
+  //  font-size: 32px;
+  //}
   .promo_desc{
     font-size: 16px;
     padding: 0 27px;
@@ -225,6 +275,9 @@
   .vision_desc{
     margin: 60px 0px 0px 0px;
   }
+  .factors_item{
+    width: 270px;
+  }
   .factors_item_title{
     font-size: 26px;
   }
@@ -233,6 +286,7 @@
   }
   .factors_item_img{
     height: 90px;
+    width: 90px;
   }
   .projects_company{
     min-width: 150px;
@@ -285,9 +339,9 @@
   .side_menu_item{
     font-size: 20px;
   }
-  .social_title, .promo_title, .vision_title, .factors_title, .team_title, .projects_title, .network_title, .footer_title{
-    font-size: 24px;
-  }
+  //.social_title, .promo_title, .vision_title, .factors_title, .team_title, .projects_title, .network_title, .footer_title{
+  //  font-size: 24px;
+  //}
   .promo_divider{
     width: 265px;
   }
@@ -334,6 +388,7 @@
   }
   .factors_item_img{
     height: 60px;
+    width: 60px;
     margin-bottom: 30px;
   }
   .team{
@@ -424,9 +479,9 @@
   .side_menu_item{
     font-size: 20px;
   }
-  .social_title, .promo_title, .vision_title, .factors_title, .team_title, .projects_title, .network_title, .footer_title{
-    font-size: 24px;
-  }
+  //.social_title, .promo_title, .vision_title, .factors_title, .team_title, .projects_title, .network_title, .footer_title{
+  //  font-size: 24px;
+  //}
   .promo_divider{
     width: 210px;
   }
